--- a/about_us/aboutUs.html
+++ b/about_us/aboutUs.html
@@ -24,8 +24,8 @@
                  From design to delivery, we fuse IT skills with stunning animations.
                 </p>
                 <div class="heroButton-wrapper">
-                 <a class="btn btn-warning colorBtn" href="/Departmentpage.html">Get Start</a>
-                 <a class="btn btn-light trasparent-Button" href="/services.html">Our Services</a>
+                 <a class="btn btn-warning colorBtn" href="/department_page/new_department.html">Get Start</a>
+                 <a class="btn btn-light trasparent-Button" href="/service_page/services.html">Our Services</a>
             </div>
             </div>
 
@@ -37,8 +37,8 @@
                   From design to delivery, we fuse IT skills with stunning animations.
                 </p>
                   <div class="heroButton-wrapper">
-                   <a class="btn btn-warning colorBtn" href="/department_page/Departmentpage.html">Get Start</a>
-                   <a class="btn btn-light trasparent-Button" href="/services.html">Our Services</a>
+                   <a class="btn btn-warning colorBtn" href="/department_page/new_department.html">Get Start</a>
+                   <a class="btn btn-light trasparent-Button" href="/service_page/services.html">Our Services</a>
               </div>
               </div>
             </div>
@@ -46,7 +46,7 @@
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
-                <img src="/Logo_Folder/jechotech_logo.png" alt="">
+                <img src="/logo_Folder/jechotech_logo.png" alt="">
               </a>
               <!-- Offcanvas Toggle Button -->
               <button class="navbar-toggler smallScreen-button" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -113,7 +113,7 @@
                 <div class="modal-content headerWrapper">
                     <div class="modal-header">
                         <a href="/index.html" class="navbar-brand" id="fullScreenModalLabel">
-                          <img src="/Logo_Folder/jechotech_logo.png" alt="">
+                          <img src="/logo_Folder/jechotech_logo.png" alt="">
                         </a>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -179,7 +179,7 @@
               <div class="modal-content headerWrapper">
                   <div class="modal-header">
                       <a href="/index.html" class="navbar-brand" id="fullScreenModalLabel">
-                        <img src="/Logo_Folder/jechotech_logo.png" alt="">
+                        <img src="/logo_Folder/jechotech_logo.png" alt="">
                       </a>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
@@ -483,7 +483,7 @@
           <div class="col-sm-12 col-md-6 p-5 d-md-flex d-sm-block">
             <div class="col-sm-12 col-md-6 d-block subFooter-one">
             <div class="my-logo">
-              <img src="/Logo_Folder/jechotech_logo.png" alt="My logo">
+              <img src="/logo_Folder/jechotech_logo.png" alt="My logo">
               <p>Jechotech-solution</p>
             </div>
             <div class="About-us">
