--- a/department_page/new_department.html
+++ b/department_page/new_department.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/home_page/teststyl.css">
     <link rel="stylesheet" href="/cracked_cdns/cracked_css.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="/department_page/new_departCss.css">
+    <link rel="stylesheet" href="./new_departCss.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
       integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
        crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -45,7 +45,7 @@
             <a href="/department_page/preview_page.html">
             <div class="card main-card">
                 <div class="card-image">
-                    <img src="/CardPhoto_folder/MobileIcon.png" alt="image">
+                    <img src="/cardPhoto_folder/mobileApp.png" alt="image">
                     <p class="card-text">Type Of Work</p>
                     <div class="nameWrapper">
                     <h3>Web Developement</h3>
@@ -61,7 +61,7 @@
             <a href="/department_page/preview_page.html">
             <div class="card main-card">
                 <div class="card-image">
-                    <img src="/CardPhoto_folder/MobileIcon.png" alt="image">
+                    <img src="/cardPhoto_folder/mobileApp.png" alt="image">
                     <p class="card-text">type of work</p>
                     <div class="nameWrapper">
                     <h3>Mobile Developement</h3>
@@ -77,7 +77,7 @@
             <a href="/department_page/preview_page.html">
             <div class="card main-card">
                 <div class="card-image">
-                    <img src="/CardPhoto_folder/MobileIcon.png" alt="image">
+                    <img src="/cardPhoto_folder/mobileApp.png" alt="image">
                     <p class="card-text">type of work</p>
                     <div class="nameWrapper">
                     <h3>Blender Animation (Cratch)</h3>
@@ -93,7 +93,7 @@
             <a href="/department_page/preview_page.html">
             <div class="card main-card">
                 <div class="card-image">
-                    <img src="/CardPhoto_folder/MobileIcon.png" alt="image">
+                    <img src="/cardPhoto_folder/mobileApp.png" alt="image">
                     <p class="card-text">type of work</p>
                     <div class="nameWrapper">
                     <h3>Arduino & Intro To Programming</h3>
@@ -109,7 +109,7 @@
             <a href="/department_page/preview_page.html">
             <div class="card main-card">
                 <div class="card-image">
-                    <img src="/CardPhoto_folder/MobileIcon.png" alt="image">
+                    <img src="/cardPhoto_folder/mobileApp.png" alt="image">
                     <p class="card-text">type of work</p>
                     <div class="nameWrapper">
                     <h3>Professional Graphic Design</h3>
@@ -125,7 +125,7 @@
             <a href="/department_page/preview_page.html">
             <div class="card main-card">
                 <div class="card-image">
-                    <img src="/CardPhoto_folder/MobileIcon.png" alt="image">
+                    <img src="/cardPhoto_folder/mobileApp.png" alt="image">
                     <p class="card-text">type of work</p>
                     <div class="nameWrapper">
                     <h3>Home Electrical/Electronics MAintainanance</h3>
@@ -186,7 +186,7 @@
           <div class="col-sm-12 col-md-6 p-5 d-md-flex d-sm-block">
             <div class="col-sm-12 col-md-6 d-block subFooter-one">
             <div class="my-logo">
-              <img src="/Logo_Folder/jechotech_logo.png" alt="My logo">
+              <img src="/logo_Folder/jechotech_logo.png" alt="My logo">
               <p>Jechotech-solution</p>
             </div>
             <div class="About-us">
