--- a/faq_page/FAQ.html
+++ b/faq_page/FAQ.html
@@ -32,7 +32,7 @@
         <nav class="navbar navbar-expand-lg navbar-custom">
             <div class="container-fluid">
               <a class="navbar-brand" href="/index.html">
-                <img src="/Logo_Folder/jechotech_logo.png" alt="">
+                <img src="/logo_Folder/jechotech_logo.png" alt="">
               </a>
               <!-- Offcanvas Toggle Button -->
               <button class="navbar-toggler smallScreen-button" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -73,7 +73,7 @@
               <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link Home" aria-current="page" href="/home_page/index.html">Home</a>
+                    <a class="nav-link Home" aria-current="page" href="/index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/service_page/services.html">Our Services</a>
@@ -453,7 +453,7 @@
           <div class="col-sm-12 col-md-6 p-5 d-md-flex d-sm-block">
             <div class="col-sm-12 col-md-6 d-block subFooter-one">
             <div class="my-logo">
-              <img src="/Logo_Folder/jechotech_logo.png" alt="My logo">
+              <img src="/logo_Folder/jechotech_logo.png" alt="My logo">
               <p>Jechotech-solution</p>
             </div>
             <div class="About-us">
