change the index page location and i also work on th student_project folder

--- a/department_page/preview_page.html
+++ b/department_page/preview_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preview</title>
-    <link rel="stylesheet" href="/home_page/teststyl.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="./preview.css">
     <link rel="stylesheet" href="./new_departCss.css">
     <link rel="stylesheet" href="/cracked_cdns/cracked_css.css">
@@ -372,9 +372,9 @@
                                </div>
                                <div class="row  deprowWRapper">
                                 <div class="col col-md-4 serviceCard-wrapp">
-                                  <a href="/student_projects/Dictionary API App/diction.html">
+                                  <a href="/student_projects/dictionary_app/diction.html">
                                         <div class="fontImage text-center">
-                                        <img src="/MyMyWeb_grahics/ReflecSearchInputwithImageAtBack.jpg" alt="font image">
+                                        <img src="/my_web_grahics/reflectScreenSocialMediaAdvert.jpg" alt="font image">
                                         </div>
                                         <h4 class="text-center project-text">Dictionary App<button type="button" class="projectButton">Click here</button></h4>
                                   </a>
@@ -382,25 +382,25 @@
                                 
 
                                  <div class="col col-md-4 serviceCard-wrapp">
-                                  <a href="/student_projects/Country-guide App/country_guide.html">
+                                  <a href="/student_projects/country_guide_App/country_guide.html">
                                         <div class="fontImage text-center">
-                                        <img src="/MyMyWeb_grahics/WebAppDesign.jpg" alt="font image">
+                                        <img src="/my_web_grahics/webAppDesign.jpg" alt="font image">
                                         </div>
                                         <h4 class="text-center project-text">Country_guide App<button type="button" class="projectButton">Click here</button></h4>
                                   </a>
                                 </div>
 
                                 <div class="col col-md-4 serviceCard-wrapp">
-                                  <a href="/student_projects/Currency_Converter App/currency-cov.html">
+                                  <a href="/student_projects/currency_converter_app/currency-cov.html">
                                         <div class="fontImage text-center">
-                                        <img src="/MyMyWeb_grahics/CardViewAdvert.jpg" alt="font image">
+                                        <img src="/my_web_grahics/cardViewAdvert.jpg" alt="font image">
                                         </div>
                                         <h4 class="text-center project-text">Currency_converter App<button type="button" class="projectButton">Click here</button></h4>
                                   </a>
                                 </div>
 
                                 <div class="col col-md-4 serviceCard-wrapp">
-                                  <a href="/student_projects/Gif search App/gifSearch.html">
+                                  <a href="/student_projects/gif_search_app/gifsearch.html">
                                         <div class="fontImage text-center">
                                         <img src="/project_photos/jechoAI_withlogo.png" alt="font image">
                                         </div>
@@ -409,27 +409,27 @@
                                 </div>
 
                                 <div class="col col-md-4 serviceCard-wrapp">
-                                  <a href="/student_projects/image fetching App/imageFetching.html">
+                                  <a href="/student_projects/image_fetching_app/imagefetching.html">
                                         <div class="fontImage text-center">
-                                        <img src="/CardPhoto_folder/Reflectgreen.png" alt="font image">
+                                        <img src="/cardPhoto_folder/reflectWhatsap.png" alt="font image">
                                         </div>
                                         <h4 class="text-center project-text">Image_fetching App<button type="button" class="projectButton">Click here</button></h4>
                                   </a>
                                 </div>
 
                                 <div class="col col-md-4 serviceCard-wrapp">
-                                  <a href="/student_projects/Meme-App/meme.html">
+                                  <a href="/student_projects/meme_app/meme.html">
                                         <div class="fontImage text-center">
-                                        <img src="/CardPhoto_folder/FlyingSocialIcons.png" alt="font image">
+                                        <img src="/cardPhoto_folder/flyingSocialIcons.png" alt="font image">
                                         </div>
                                         <h4 class="text-center project-text">Meme_App<button type="button" class="projectButton">Click here</button></h4>
                                   </a>
                                 </div>
 
                                 <div class="col col-md-4 serviceCard-wrapp">
-                                  <a href="/student_projects/pokemon fetching/pokeman.html">
+                                  <a href="/student_projects/pokemon_fetching/pokeman.html">
                                         <div class="fontImage text-center">
-                                        <img src="/MyMyWeb_grahics/BlockLongSocialMediaIcons.jpg" alt="font image">
+                                        <img src="/my_web_grahics/blockLongSocialMediaIcons.jpg" alt="font image">
                                         </div>
                                         <h4 class="text-center project-text">Pokemon_fetching<button type="button" class="projectButton">Click here</button></h4>
                                   </a>
@@ -544,7 +544,7 @@
       </footer>
   
     
-    <script src="/home_page/testjs.js"></script>
+    <script src="/testjs.js"></script>
     <script src="./preview-depart.js"></script>
     <script src="/cracked_cdns/cracked_min.js"></script>
     <script src="/cracked_cdns/crackedPopper.js"></script>
