--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tesing</title>
     <!-- customize css -->
-     <link rel="stylesheet" href="/home_page/teststyl.css">
+     <link rel="stylesheet" href="/style.css">
      <link rel="stylesheet" href="/department_page/preview.css">
      <!-- cracked boostrap -->
       <link rel="stylesheet" href="/cracked_cdns/cracked_css.css">
@@ -991,7 +991,7 @@
        <script src="/cracked_cdns/cracked_min.js"></script>
     <script src="/cracked_cdns/crackedPopper.js"></script>
     <script src="/cracked_cdns/crackedJqueryCdn.js"></script>
-       <script src="/home_page/testjs.js"></script>
+       <script src="/testjs.js"></script>
        <script src="/department_page/preview-depart.js"></script>
 </body>
 </html>
