--- a/student_projects/meme_app/meme.html
+++ b/student_projects/meme_app/meme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meme_App</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./meme.css">
 </head>
 <body>
   
@@ -14,6 +14,5 @@
         <button id="get-meme-btn">Get meme</button>
     </div>
     <script src="./my-js.js"></script>
-    <script src="/API-key.js"></script>
 </body>
 </html>
