--- a/faq_page/FAQ.html
+++ b/faq_page/FAQ.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/about_us/aboutUs.css">
     <link rel="stylesheet" href="/cracked_cdns/cracked_css.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="/home_page/teststyl.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/contact_page/contact-page.css">
     <link rel="stylesheet" href="./FAQ.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
@@ -539,6 +539,6 @@
      <script src="/cracked_cdns/cracked_min.js"></script>
     <script src="/cracked_cdns/crackedPopper.js"></script>
     <script src="/cracked_cdns/crackedJqueryCdn.js"></script>
-      <script src="/home_page/testjs.js"></script>
+      <script src="/testjs.js"></script>
 </body>
 </html>
