--- a/private_policy/Privacy-policy.html
+++ b/private_policy/Privacy-policy.html
@@ -6,7 +6,7 @@
     <title>Privacy policy</title>
     <link rel="stylesheet" href="/cracked_cdns/cracked_css.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="/home_page/teststyl.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="./privacy-policy.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
       integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -216,7 +216,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
       <!-- customiize javascript -->
-       <script src="/home_page/testjs.js"></script>
+       <script src="/testjs.js"></script>
        <script src="/cracked_cdns/cracked_min.js"></script>
     <script src="/cracked_cdns/crackedPopper.js"></script>
     <script src="/cracked_cdns/crackedJqueryCdn.js"></script>
