--- a/service_page/services.html
+++ b/service_page/services.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/about_us/aboutUs.css">
     <link rel="stylesheet" href="/cracked_cdns/cracked_css.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="/home_page/teststyl.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/contact_page/contact-page.css">
     <link rel="stylesheet" href="/service_page/sevices.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
