--- a/student_projects/gif_search_app/gifsearch.html
+++ b/student_projects/gif_search_app/gifsearch.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git_Search App</title>
     <!-- custom css -->
-     <link rel="stylesheet" href="./gifSearch.css">
+     <link rel="stylesheet" href="./gifsearch.css">
 </head>
 <body>
 
