--- a/student_projects/image_fetching_app/imagefetching.html
+++ b/student_projects/image_fetching_app/imagefetching.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Image Fetching App</title>
-    <link rel="stylesheet" href="./imageFetching.css">
+    <link rel="stylesheet" href="./imagefetching.css">
 </head>
 <body>
     <header>
@@ -26,6 +26,6 @@
     </main>
     
 
-    <script src="./imageFetching.js"></script>
+    <script src="./imagefetching.js"></script>
 </body>
 </html>
